deploy/k8s/overlays/staging/patches/centrifugo-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: centrifugo
spec:
  template:
    spec:
      containers:
        - name: centrifugo
